--- a/src/assets/styles/index.scss
+++ b/src/assets/styles/index.scss
@@ -86,7 +86,7 @@ body > #root{
 
                 %profile-header {
                     height: 64px;
-                    border-bottom: 1px solid #747474;
+                    border-bottom: 1px solid #CCCCCC;
                     color: #747474;
                     font-size: 16px;
                     font-weight: 500;
@@ -222,17 +222,92 @@ body > #root{
             }
 
             .about-container {
-                
+                position: relative;
+                top: 100px;
+
                 .row {
                     .about-content {
-                        background-color: white;
-                        height: 200px;
                         margin-right: 15px;
-                        position: relative;
-                        top: 100px;
                         padding: 15px;
-                        
 
+                        .post-container {
+                            width: 90%;
+                            margin-left: 10%;
+                            position: relative;
+
+                            &::before {
+                                content: '';
+                                border: 2px solid #cccccc;
+                                position: absolute;
+                                height: 100%;
+                                left: -40px;
+
+                            }
+
+                            .post {
+                                background-color: white;
+                                border-radius: 5px;
+                                box-shadow: 1px 1px 3px 1px #c5c5c5;
+                                margin-bottom: 40px;
+                                
+                                .post-header {
+                                    height: 90px;
+                                    position: relative;
+                                    padding: 20px;
+                                    border-bottom: 1px solid #CCCCCC;
+
+                                    .headline {
+                                        font-size: 16px;
+                                        margin-bottom: 0px;
+                                    }
+                                    
+                                    .timestamp {
+                                        color: grey;
+                                    }
+
+                                    img {
+                                        display: block;
+                                        width: 4%;
+                                        position: absolute;
+                                        left: -54px;
+                                    }
+                                }
+
+                                .post-footer {
+                                    padding: 20px;
+                                    border-top: 1px solid #CCCCCC;
+
+                                    .headline {
+                                        font-size: 16px;
+                                    }
+
+                                    .description {
+                                        color: grey;
+                                    }
+                                }
+
+                                .button-container {
+                                    border-top: 1px solid #CCCCCC;
+                                    padding: 20px;
+                                    
+                                    .button {
+                                        padding: 0 10px;
+                                        font-size: 16px;
+                                        text-decoration: none;
+                                        color: grey;
+
+                                        &::after {
+                                            content: '|';
+                                            margin-left: 10px;
+                                        }
+
+                                        i {
+                                            padding-right: 10px;
+                                        }
+                                    }
+                                }
+                            }
+                        }
                     }
                 }
             }
