--- a/src/assets/styles/index.scss
+++ b/src/assets/styles/index.scss
@@ -40,6 +40,7 @@ body > #root{
     .main-container {
         padding-top: 50px;
         background-color: #e5e5e5;
+        padding-bottom: 100px;
 
         .profile-heading {
             font-size: 24px;
