Added changes to json file

--- a/src/assets/styles/index.scss
+++ b/src/assets/styles/index.scss
@@ -293,6 +293,10 @@ body > #root{
                                     .description {
                                         color: grey;
                                     }
+
+                                    .title {
+                                        font-weight: 500;
+                                    }
                                 }
 
                                 .button-container {
