--- a/src/assets/styles/index.scss
+++ b/src/assets/styles/index.scss
@@ -425,6 +425,25 @@ body > #root{
             }
         }
     }
+
+    .login-form-container {
+        height: 800px;
+        background-color: #3198fe;
+        position: relative;
+
+
+        .form-center {
+            width: 500px;
+            border-radius: 15px;
+            background-color: white;
+            position: absolute;
+            top: 30%;
+            left: 50%;
+            transform: translate(-50%, -30%);
+            padding: 15px;
+        }
+
+    }
 }
 
 @media only screen and (min-width: 480px) and (max-width: 767px){
