Fixed issues with login process

--- a/src/assets/styles/index.scss
+++ b/src/assets/styles/index.scss
@@ -24,6 +24,7 @@ body > #root{
             img {
                 width: 40px;
                 margin-right: 5px;
+                border-radius: 50%;
             }
         }
     }
