Added email availability check and added logout favicon

--- a/src/assets/styles/index.scss
+++ b/src/assets/styles/index.scss
@@ -27,8 +27,13 @@ body > #root{
                 border-radius: 50%;
             }
 
-            button.btn {
-                padding: 2px 5px;
+            i.fa {
+                padding: 10px;
+                margin-left: 10px;
+
+                &:hover {
+                    color: #aaaaaa;
+                }
             }
         }
     }
