--- a/src/assets/styles/index.scss
+++ b/src/assets/styles/index.scss
@@ -1,8 +1,11 @@
+$shadow: 1px 1px 3px 1px #c5c5c5;
+$blue-main: #1b8bf9;
+
 body > #root{
 
     header {
         height: 50px;
-        background-color: #1b8bf9;
+        background-color: $blue-main;
 
         div {
             display: inline-block;
@@ -30,7 +33,6 @@ body > #root{
             i.fa {
                 padding: 10px;
                 margin-left: 10px;
-
                 &:hover {
                     color: #aaaaaa;
                 }
@@ -66,7 +68,7 @@ body > #root{
             background-origin: border-box;
             height: 325px;
             position: relative;
-            box-shadow: 1px 1px 3px 1px #c5c5c5;
+            box-shadow: $shadow;
 
             .menu { 
                 height: 70px;
@@ -75,7 +77,7 @@ body > #root{
                 position: absolute;
                 right: 0;
                 bottom: -70px;
-                box-shadow: 1px 1px 3px 1px #c5c5c5;
+                box-shadow: $shadow;
 
                 .menu-item {
                     text-align: center;
@@ -93,7 +95,6 @@ body > #root{
         .row {
             
             .profile-content {
-                // width: 22%;
                 height: 100%;
                 position: relative;
                 top: -200px;
@@ -126,11 +127,9 @@ body > #root{
                     .user-stats {
                         margin: 30px 0;
                         width: 100%;
-
                         .content {
                             width: 33%;
                             display: inline-block;
-
                             .main-count {
                                 font-size: 22px;
                                 color: #2b93ff;
@@ -150,7 +149,7 @@ body > #root{
 
                         &:hover {
                             color: white;
-                            background-color: #1b8bf9;
+                            background-color: $blue-main;
                         }
 
                         i {
@@ -163,18 +162,15 @@ body > #root{
                     @extend %share-profile;
                     padding: 0px;
                     text-align: left;
-                    box-shadow: 1px 1px 3px 1px #c5c5c5;
-
+                    box-shadow: $shadow;
                     .following-header {
                         @extend %profile-header;
                     }
 
                     .following-content {
                         padding: 15px;
-
                         .following-info {
                             margin: 10px 10px;
-
                             .following-img {
                                 display: inline-block;
                                 width: 25%;
@@ -185,12 +181,10 @@ body > #root{
                             .follower-info {
                                 display: inline-block;
                                 padding: 0 10px;
-                                width: 75%;
-                                
+                                width: 75%;              
                                 .follower-name {
                                     font-size: 16px;
                                 }
-
                                 .follower-work {
                                     color: #747474;
                                     font-size: 14px;
@@ -204,11 +198,9 @@ body > #root{
                     @extend %share-profile;
                     padding: 0px;
                     text-align: left;
-                    box-shadow: 1px 1px 3px 1px #c5c5c5;
-
+                    box-shadow: $shadow;
                     .following-header {
                         @extend %profile-header;
-
                         .show-friends-button {
                             display: inline-block;
                             float: right;
@@ -237,17 +229,13 @@ body > #root{
             .about-container {
                 position: relative;
                 top: 100px;
-
                 .row {
                     .about-content {
-                        // margin-right: 15px;
                         padding: 15px;
-
                         .post-container {
                             width: 90%;
                             margin-left: 10%;
                             position: relative;
-
                             &::before {
                                 content: '';
                                 border: 2px solid #cccccc;
@@ -268,14 +256,12 @@ body > #root{
                             .post {
                                 background-color: white;
                                 border-radius: 5px;
-                                box-shadow: 1px 1px 3px 1px #c5c5c5;
-                                margin-bottom: 40px;
-                                
+                                box-shadow: $shadow;
+                                margin-bottom: 40px;     
                                 .post-header {
                                     position: relative;
                                     padding: 20px;
                                     border-bottom: 1px solid #CCCCCC;
-
                                     .headline {
                                         font-size: 16px;
                                         margin-bottom: 0px;
@@ -297,7 +283,6 @@ body > #root{
                                 .post-footer {
                                     padding: 20px;
                                     border-top: 1px solid #CCCCCC;
-
                                     .headline {
                                         font-size: 16px;
                                     }
@@ -313,14 +298,12 @@ body > #root{
 
                                 .button-container {
                                     border-top: 1px solid #CCCCCC;
-                                    padding: 20px;
-                                    
+                                    padding: 20px;   
                                     .button {
                                         padding: 0 10px;
                                         font-size: 16px;
                                         text-decoration: none;
                                         color: grey;
-
                                         &::after {
                                             content: '|';
                                             margin-left: 10px;
@@ -339,10 +322,9 @@ body > #root{
                                 display: block;
                                 float: right;
                                 padding: 10px;
-                                background-color: #1b8bf9;
+                                background-color: $blue-main;
                                 color:white;
                                 border-radius: 5px;
-
                                 &:hover {
                                     background-color: #0979c5
                                 }
@@ -352,10 +334,9 @@ body > #root{
                                 background-color: white;
                                 border-radius: 5px;
                                 margin-bottom: 40px;
-                                box-shadow: 1px 1px 3px 1px #c5c5c5;
+                                box-shadow: $shadow;
                                 .header {
                                     @extend %profile-header;
-
                                     i {
                                         @extend %edit-info-button;
                                     }
@@ -366,14 +347,11 @@ body > #root{
                                     font-size: 16px;
                                     .row {
                                         margin: 20px 5px;
-
                                         .title {
                                             font-weight: 500;    
                                         }
-
                                         .value {
                                             color: grey;
-
                                             .form-group {
                                                 margin-bottom: 0;
                                             }
@@ -386,7 +364,7 @@ body > #root{
                         .photos-container {
                             background-color: white;
                             padding: 20px;
-                            box-shadow: 1px 1px 3px 1px #c5c5c5;
+                            box-shadow: $shadow;
                             border-radius: 5px;
                             .image {
                                 width: 24%;
@@ -400,8 +378,7 @@ body > #root{
                                     margin-bottom: 10px;
                                     background-color: white;
                                     padding: 10px;
-                                    box-shadow: 1px 1px 3px 1px #c5c5c5;
-
+                                    box-shadow: $shadow;
                                     .friend-profile-pic {
                                         height: 100%;
                                     }
@@ -412,7 +389,6 @@ body > #root{
                                         margin: 15px 0; 
                                         padding-left: 10px;
                                         font-size: 12px;
-
                                         .friend-name {
                                             font-size: 16px;
                                         }
@@ -426,7 +402,7 @@ body > #root{
                                             display: inline-block;
                                             padding: 5px 15px;
                                             border-radius: 5px;
-                                            background-color: #1b8bf9;
+                                            background-color: $blue-main;
                                             color: white;
                                         }
                                     }
@@ -443,8 +419,6 @@ body > #root{
         height: 800px;
         background-color: #3198fe;
         position: relative;
-
-
         .form-center {
             border-radius: 15px;
             background-color: white;
@@ -454,7 +428,6 @@ body > #root{
             transform: translate(-50%, -30%);
             padding: 15px;
         }
-
     }
 }
 
@@ -463,16 +436,13 @@ body > #root{
 
         header {
             height: 40px;
-    
             .company-name {
                 font-size: 24px;
                 margin-left: 5%;
-            }
-    
+            } 
             .nav-user {
                 margin-right: 2%;
-                font-size: 16px;
-    
+                font-size: 16px; 
                 img {
                     width: 30px;
                     margin-right: 5px;
@@ -498,7 +468,6 @@ body > #root{
             .row {
                 .profile-content {
                     top: 100px;
-
                     .following {
                         .following-content {
                             .following-info {
@@ -520,10 +489,8 @@ body > #root{
 
                 .about-container {
                     top: 80px;
-
                     .row {
                         .about-content {
-
                             .about {
                                 .basic-info {
                                     .content {
@@ -549,18 +516,18 @@ body > #root{
                                             left: -44px;
                                         }
                                     }
+
                                     .button-container {
                                         padding: 3%;
                                         
                                         .button {
                                             padding: 0 2%px;
                                             font-size: 14px;
-    
                                             &::after {
                                                 content: '|';
                                                 margin-left: 2%;
                                             }
-    
+
                                             i {
                                                 display: none;
                                             }
