--- a/src/assets/styles/index.scss
+++ b/src/assets/styles/index.scss
@@ -3,6 +3,15 @@ $blue-main: #1b8bf9;
 
 body > #root{
 
+    .input {
+        display: none;
+    }
+
+    .input-error {
+        display: block;
+        color: red;
+        font-weight: 500;
+    }
     header {
         height: 50px;
         background-color: $blue-main;
